# taobao_api

./: Cargo.toml  README.md
rookie/rookie-rs/: Cargo.toml
rookie/rookie-rs/src/: lib.rs
rookie/rookie-rs/src/browser/: internet_explorer.rs  mod.rs
rookie/rookie-rs/src/common/: enums.rs
src/: api.rs  cookie.rs  guide.rs  main.rs  sync_time.rs  terminal.rs
src/actions/: cart.rs  settlement.rs  submit.rs  utils.rs
src/payloads/: cart.rs  settlement.rs  submit.rs  urlencode.rs  user_info.rs
